[package]
name = "frunk-test"
version = "0.1.0"
authors = ["Josh Palmer <jpalmerwatkins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frunk = "0.3.1"
frunk_core = "0.3.1"
tramp = "0.3.0"
parking_lot = "0.11.1"